Change Documents so that tpye -> source and type is now supported including other
